[package]
name = "json-token-perf"
version = "0.1.0"
edition = "2018"

[features]
default = []
altalloc = ["mimalloc"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
mimalloc = { version = "0.1.25", default-features = false, optional = true }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tapa-trait-serde = { version = "0.2.0", features = ["json"], default-features = false }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
